Fix media picker overflow

--- a/scss/_content-create.scss
+++ b/scss/_content-create.scss
@@ -22,20 +22,3 @@
 .dullahan-modal.is-open {
   display: block;
 }
-
-.content-create-media-header {
-  width: 100%;
-  height: 80px;
-  background-color: red;
-  position: absolute;
-  top:0;
-  z-index: 200;
-}
-
-.content-create-media-items-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  overflow-y: scroll;
-  height: 100%;
-}
